# maillogger

./: .gitignore  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  tox.ini
.chglog/: config.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: pull_request.yml  release.yml
maillogger/: analyze.py  cli.py  exceptions.py  main.py  parser.py
maillogger/file/: base.py  filetype.py  loader.py  writer.py
tests/: test_cli.py  test_loader.py  test_main.py  test_parser.py  test_writer.py  utils.py
tests/fixtures/correct/: output.csv  output.json  output.tsv  parsed_maillog.json
tests/fixtures/source/: maillog  records.json
