[tool.poetry]
name = "maillogger"
version = "0.1.0"
description = "Analysis tool for Postfix log in /var/log/maillog"
authors = ["homoluctus <w.slife18sy@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/homoluctus/maillogger"
keywords = ["postfix", "maillog"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8"
]
packages = [
  { include = "maillogger" }
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
flake8 = "^3.8.3"
pytest = "^6.0.1"
pytest-cov = "^2.10.0"
mypy = "^0.782"
isort = "^5.4.1"
safety = "^1.9.0"
importlib-metadata = {version = "^1.0.0", python = "<3.8"}

[tool.poetry.scripts]
maillogger = 'maillogger.main:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
